name:                 haskbot
version:              0.0.1.0
maintainer:           Jon Childress <jon@childr.es>
homepage:             https://github.com/jonplussed/haskbot

license:              ROFLCOPTER
license-file:         LICENSE.txt
copyright:            (c) 2011-2013 Simon Hengel

synopsis:             A Haskell-based chatbot for Slack, IRC, etc
description:          A chatbot for use in Slack, IRC, or any other webchat
                      protocol. Requires a connector for each protocol, and can
                      then be started as a server for any. Responses are
                      generated via "Hasklets".

stability:            volatile
category:             web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >= 1.10

source-repository     head
  type:               git
  location:           https://github.com/jonplussed/haskbot

executable            haskbot
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:      aeson        >= 0.6 && < 2.0,
                      base         >= 4.6 && < 4.7,
                      bytestring   >= 0.10 && < 2.0,
                      containers   >= 0.5 && < 2.0,
                      hedis        >= 0.6.5 && < 2.0,
                      http-client  >= 0.3 && < 2.0,
                      http-conduit >= 2.1 && < 3.0,
                      http-types   >= 0.8.5 && < 2.0,
                      monads-tf    >= 0.1 && < 2.0,
                      scotty       >= 0.8 && < 2.0,
                      text         >= 0.11 && < 2.0,
                      time         >= 1.4 && < 2.0,
                      transformers >= 0.3 && < 2.0
  default-language:   Haskell2010

test-suite            spec
  hs-source-dirs:     src, test
  main-is:            Spec.hs
  build-depends:      aeson        >= 0.6 && < 2.0,
                      base         >= 4.6 && < 4.7,
                      bytestring   >= 0.10 && < 2.0,
                      containers   >= 0.5 && < 2.0,
                      hedis        >= 0.6.5 && < 2.0,
                      hspec        >= 1.8 && < 2.0,
                      http-client  >= 0.3 && < 2.0,
                      http-conduit >= 2.1 && < 3.0,
                      http-types   >= 0.8.5 && < 2.0,
                      monads-tf    >= 0.1 && < 2.0,
                      scotty       >= 0.8 && < 2.0,
                      text         >= 0.11 && < 2.0,
                      time         >= 1.4 && < 2.0,
                      transformers >= 0.3 && < 2.0
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
