name:                 haskbot
version:              0.0.1.0
maintainer:           Jonathan Childress <jon@childr.es>
homepage:             https://github.com/jonplussed/haskbot-core

license:              MIT
license-file:         LICENSE.txt
copyright:            (c) 2014 Jonathan Childress

synopsis:             A Scotty-based chatbot for the Slack messaging service
description:          A web server that listens for slash-commands from the
                      Slack messaging service and responds via the Slack
                      incoming service integrations. Commands and responses are
                      generated via plugins, with each plugin corresponding to
                      a particular command. See README.md for full setup
                      instructions.

stability:            volatile
category:             web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >= 1.10

source-repository     head
  type:               git
  location:           https://github.com/jonplussed/haskbot

library
  hs-source-dirs:     src
  build-depends:      aeson        >= 0.6 && < 2.0,
                      base         >= 4.6 && < 4.7,
                      bytestring   >= 0.10 && < 2.0,
                      connection   >= 0.2 && < 2.0,
                      http-conduit >= 2.1 && < 3.0,
                      http-types   >= 0.8.5 && < 2.0,
                      monads-tf    >= 0.1 && < 2.0,
                      scotty       >= 0.8 && < 2.0,
                      stm          >= 2.4 && < 3.0,
                      text         >= 0.11 && < 2.0,
                      time         >= 1.4 && < 2.0
  default-language:   Haskell2010

test-suite            spec
  hs-source-dirs:     src, test
  main-is:            Spec.hs
  build-depends:      aeson        >= 0.6 && < 2.0,
                      base         >= 4.6 && < 4.7,
                      bytestring   >= 0.10 && < 2.0,
                      connection   >= 0.2 && < 2.0,
                      hspec        >= 1.8 && < 2.0,
                      http-conduit >= 2.1 && < 3.0,
                      http-types   >= 0.8.5 && < 2.0,
                      monads-tf    >= 0.1 && < 2.0,
                      scotty       >= 0.8 && < 2.0,
                      stm          >= 2.4 && < 3.0,
                      text         >= 0.11 && < 2.0,
                      time         >= 1.4 && < 2.0
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
