name:                 haskbot-core
version:              0.0.1.0
maintainer:           Jonathan Childress <jon@childr.es>
homepage:             https://github.com/jonplussed/haskbot-core

license:              MIT
license-file:         LICENSE.txt
copyright:            (c) 2014 Jonathan Childress

synopsis:             Easily-extensible chatbot for Slack messaging service
description:          Haskbot melds together the Slack /slash command/ and /incoming/ API
                      integrations to create an easily-extensible platform for adding your own
                      custom /slash commands/ with arbitrary responses to your team's Slack
                      service.
                      .
                      Sure, Hubot exists, but when I desire custom chatbot functionality, I'd rather
                      write nice, clean Haskell than clunky Javascript any day of the week.

stability:            volatile
category:             web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >= 1.10

source-repository     head
  type:               git
  location:           https://github.com/jonplussed/haskbot

library
  hs-source-dirs:     src
  exposed-modules:    Slack.Haskbot
                      Slack.Haskbot.Plugin
                      Slack.Haskbot.SlashCommand
                      Slack.Haskbot.Types
  other-modules:      Slack.Haskbot.Internal.Environment
                      Slack.Haskbot.Internal.Incoming
                      Slack.Haskbot.Internal.Plugin
                      Slack.Haskbot.Internal.Server
                      Slack.Haskbot.Internal.SlashCommand
                      Slack.Haskbot.Internal.Types
                      Slack.Haskbot.Plugin.Help
  build-depends:      aeson        == 0.6.*
                      base         == 4.6.*
                      bytestring   == 0.10.*
                      connection   == 0.2.*
                      http-conduit == 2.1.*
                      http-types   == 0.8.*
                      monads-tf    == 0.1.*
                      scotty       == 0.8.*
                      stm          == 2.4.*
                      text         == 0.11.*
                      time         == 1.4.*
  default-language:   Haskell2010

test-suite            spec
  hs-source-dirs:     src, test
  main-is:            Spec.hs
  build-depends:      aeson        >= 0.6 && < 2.0,
                      base         >= 4.6 && < 4.7,
                      bytestring   >= 0.10 && < 2.0,
                      connection   >= 0.2 && < 2.0,
                      hspec        >= 1.8 && < 2.0,
                      http-conduit >= 2.1 && < 3.0,
                      http-types   >= 0.8.5 && < 2.0,
                      monads-tf    >= 0.1 && < 2.0,
                      scotty       >= 0.8 && < 2.0,
                      stm          >= 2.4 && < 3.0,
                      text         >= 0.11 && < 2.0,
                      time         >= 1.4 && < 2.0
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
